--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Vite App</title>
   </head>
   <body>
+    <h1>Hola desde  GitHub</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+      Doloremque neque ad optio, quod quos cum! Cum deserunt inventore 
+      accusantium ut sit? Mollitia architecto veniam eum eaque quidem fuga voluptatem iusto.</p>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
