--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Vite App</title>
   </head>
   <body>
+   <h1>Hola, un saludo desde Node.js</h1>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Repellendus sit velit quia voluptatibus perspiciatis cupiditate soluta blanditiis 
+    ipsa deleniti error placeat fuga recusandae, mollitia nisi corporis officiis, aperiam veritatis iste.</p>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
