--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
    <h1>Hola, un saludo desde Node.js</h1>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Repellendus sit velit quia voluptatibus perspiciatis cupiditate soluta blanditiis 
-    ipsa deleniti error placeat fuga recusandae, mollitia nisi corporis officiis, aperiam veritatis iste.</p>
+   <p>Node. js es un entorno de ejecución de un solo hilo, 
+    de código abierto y multiplataforma para crear
+     aplicaciones de red y del lado del servidor rápidas y escalables.</p>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
