--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Vite App</title>
   </head>
   <body>
-   <h1>Hola, un saludo desde Node.js</h1>
-   <p>Node. js es un entorno de ejecución de un solo hilo, 
-    de código abierto y multiplataforma para crear
-     aplicaciones de red y del lado del servidor rápidas y escalables.</p>
+   <h1>LA SATIRESA</h1>
+   <p>Pues la anciana me dijo mira esta rosa seca, que encantó el aparato de su sueño un dia..</p>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
